--- a/nginx/templates/app.conf.tmpl
+++ b/nginx/templates/app.conf.tmpl
@@ -17,13 +17,13 @@ server {
   server_name ${DOMAIN} www.${DOMAIN};
 
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    root   /var/www/;
+    index  index.html;
   }
 
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
-    root   /usr/share/nginx/html;
+    root   /var/www/;
   }
 
   listen [::]:443 ssl;
