comment in app.conf.tmpl

--- a/nginx/templates/app.conf.tmpl
+++ b/nginx/templates/app.conf.tmpl
@@ -21,6 +21,8 @@ server {
     index  index.html;
   }
 
+  # Other configurations here
+
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /var/www/;
