alias docs to README

--- a/nginx/templates/app.conf.tmpl
+++ b/nginx/templates/app.conf.tmpl
@@ -15,10 +15,13 @@ server {
 
 server {
   server_name ${DOMAIN} www.${DOMAIN};
-
+  
   location / {
-    root   /var/www/;
-    index  index.html;
+    root /var/www/;
+    index index.html;
+    # First attempt to serve request as file, then
+    # as directory, then fall back to displaying a 404.
+    try_files $uri $uri/ =404;
   }
 
   # Other configurations here
