--- a/nginx/templates/app.conf.tmpl
+++ b/nginx/templates/app.conf.tmpl
@@ -38,3 +38,9 @@ server {
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
+
+server {
+  listen 80 default_server;
+  listen 443 ssl default_server;
+  return 444;
+}
