--- a/nginx/templates/app.conf.tmpl
+++ b/nginx/templates/app.conf.tmpl
@@ -7,8 +7,8 @@ server {
     return 301 https://$host$request_uri;
   }
 
-  listen 80;
-  listen [::]:80;
+  listen 80 default_server;
+  listen [::]:80 default_server;
   server_name ${DOMAIN} *.${DOMAIN};
   return 404;
 }
@@ -31,16 +31,10 @@ server {
     root   /var/www/;
   }
 
-  listen [::]:443 ssl;
-  listen 443 ssl;
+  listen [::]:443 ssl default_server;
+  listen 443 ssl default_server;
   ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-}
-
-server {
-  listen 80 default_server;
-  listen 443 ssl default_server;
-  return 444;
 }
